# live-captions

./: .gitignore  AUDIT-pwa-vs-desktop.md  DEPLOY.md  LICENSE  PIVOT-PLAN.md  README.md  RELEASE-macos-intel-manual.md  ROADMAP.md  SPIKE-sherpa-onnx.md  WHATSNEW.md  package.json  pnpm-lock.yaml  tsconfig.base.json  wrangler.jsonc  wrangler.v2.jsonc
.github/workflows/: release-intel-rosetta.yml  release-intel.yml  release.yml
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
desktop/: POSTPROD-PLAN.md  README.md  TESTPLAN-qr-rooms.md  pyproject.toml
desktop/captions_desktop/: __init__.py  cli.py  clip_decoder.py  clip_frame.py  export.py  hub.py  paths.py  protocol.py  qr_png.py  recorder.py  refine.py  render.py  room_publisher.py  rooms.py  sanitize.py  server.py  streaming.py  vad.py  web.py  window.py
desktop/captions_desktop/engines/: __init__.py  base.py  faster_whisper.py  mlx.py
desktop/packaging/: build.py  captions.spec  entry.py
desktop/scripts/: verify_room_publisher.py
desktop/tests/: test_clip_decoder.py  test_clip_frame.py  test_engines.py  test_export.py  test_hub.py  test_protocol.py  test_recorder.py  test_refine.py  test_rooms.py  test_sanitize.py  test_server.py  test_streaming.py  test_window.py
docs/: HANDOVER.md  clerk-integration.md  scaling-cost.md
